# GameModMaster-Wails

./: .gitignore  AGENT.md  CLAUDE.md  PERFORMANCE_BOTTLENECKS.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_FINAL.md  PROJECT_DOCUMENTATION.md  README.md  RELEASE_NOTES_v2.1.0.md  Taskfile.yml  app.go  components.d.ts  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  rsrc_windows_386.syso  rsrc_windows_amd64.syso
data/: name_mapping.json
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  IMAGE_CACHE.md  IMAGE_CACHE_ARCHITECTURE.md  IMAGE_CACHE_IMPLEMENTATION.md  IMAGE_CACHE_QUICKSTART.md
frontend/: .npmrc  index.html  package.json  pnpm-lock.yaml
frontend/bindings/GameModMaster/: appservice.js  appservice.ts  index.js  index.ts  (+2 more)
frontend/src/: App.vue  main.ts
internal/index/: index.go  index_test.go
internal/model/: game.go  state.go  trainer.go
internal/repo/: db.go  game_repo.go  repo_test.go  state_repo.go  trainer_repo.go
internal/scraper/: parser.go  parser_test.go  scraper.go
internal/service/: download_service.go  mapping_service.go  mapping_service_test.go
scripts/: gen_icon.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: error.rs  trainer.rs
src-tauri/src/services/: image_cache.rs  mod.rs  storage.rs  trainer.rs  updater.rs
src-tauri/src/utils/: http.rs  mod.rs  zip.rs
src/i18n/: index.ts
src/services/: imageCacheService.ts
src/stores/: trainer.ts
src/types/: vue-virtual-scroller.d.ts
src/views/: DownloadsView.vue  HomeView.vue
winres/: winres.json
(+17 files in other folders)
